<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_main"
            android:icon="@drawable/ic_main"
            android:title="@string/menu_main" />
        <item
            android:id="@+id/menu_schedule"
            android:icon="@drawable/ic_schedule"
            android:title="@string/menu_schedule" />
        <item
            android:id="@+id/menu_video"
            android:icon="@drawable/ic_video"
            android:title="@string/menu_video" />
        <item
            android:id="@+id/menu_places"
            android:icon="@drawable/ic_places"
            android:title="@string/menu_placed" />
        <item
            android:id="@+id/menu_phone"
            android:icon="@drawable/ic_phone"
            android:title="@string/menu_contact" />
    </group>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_settings" />
    </group>
</menu>